# owl-control

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  GAMES.md  LINUX_DEV_SETUP.md  README.md  installer.nsi  owl-dev-setup.sh  owl-install-prerequisites.sh  package-lock.json  package.json  pyproject.toml
.github/workflows/: electron-build.yml  rust-build.yml
assets/cues/: audio_attributions.md
build-resources/: installer.nsi
build-resources/scripts/: build.ps1  bump-version.js  clean_obs_build.ps1
crates/constants/: Cargo.toml
crates/constants/src/: encoding.rs  lib.rs  obs.rs  supported_games.json  supported_games.rs  unsupported_games.json  unsupported_games.rs
crates/game-process/src/: lib.rs
crates/input-capture/: Cargo.toml
crates/input-capture/src/: gamepad_capture.rs  kbm_capture.rs  lib.rs
crates/owl-recorder/: Cargo.toml  build.rs
crates/owl-recorder/src/: api.rs  app_icon.rs  app_state.rs  assets.rs  auth_service.rs  bootstrap_recorder.rs  config.rs  config_manager.rs  hardware_specs.rs  main.rs  obs_embedded_recorder.rs  obs_socket_recorder.rs  output_types.rs  overlay.rs  recorder.rs  recording.rs  recording_thread.rs  tokio_thread.rs  upload.rs  upload_manager.rs  window_recorder.rs
crates/owl-recorder/src/ui/: consent.md  mod.rs  overlay.rs  tray_icon.rs  util.rs
crates/owl-recorder/src/upload/: mod.rs
crates/owl-recorder/src/upload/validation/: gamepad.rs  keyboard.rs  mod.rs  mouse.rs
crates/video-audio-recorder/: Cargo.toml  build.rs
crates/video-audio-recorder/src/: lib.rs
scripts/: build.ps1
src/: api.rs  app_state.rs  assets.rs  config.rs  find_game.rs  hardware_specs.rs  index.js  keycode.rs  main.rs  main.ts  obs_embedded_recorder.rs  obs_socket_recorder.rs  output_types.rs  play_time.rs  recorder.rs  settings-styles.css  settings.ts  styles.css  tokio_thread.rs
src/api/: mod.rs  multipart_upload.rs  user_upload.rs
src/components/: upload-panel.tsx
src/pages/: consent-page.tsx  settings-page.tsx
src/record/: input_recorder.rs  local_recording.rs  mod.rs  obs_embedded_recorder.rs  obs_socket_recorder.rs  recorder.rs  recording.rs
src/services/: auth-service.ts  electron-service.ts  python-bridge.ts  upload-service.ts
src/system/: ensure_single_instance.rs  keycode.rs  mod.rs
src/ui/: consent.md  egui_tools.rs  internal.rs  mod.rs  notification.rs  overlay.rs  tray_icon.rs  util.rs
src/ui/components/: mod.rs
src/ui/views/: consent.rs  login.rs  main.rs  mod.rs
src/ui/views/main/: mod.rs  recordings.rs  upload_manager.rs
src/ui/views/main/windows/: games.rs
src/upload/: create_tar.rs  mod.rs  progress_sender.rs  queue.rs  upload_folder.rs  upload_tar.rs
src/upload/validation/: keyboard.rs  mod.rs  video.rs
src/util/: mod.rs  play_time.rs  version.rs
src/validation/: gamepad.rs  keyboard.rs  mod.rs  video.rs
tests/: test_ui_clicks.ahk
tools/owlc-test-app/src/: lib.rs
tools/update-games/: Cargo.toml
tools/update-games/src/: main.rs
tools/update-unsupported-games/: Cargo.toml
tools/update-unsupported-games/src/: main.rs
tools/vm/: LINUX_DEV_SETUP.md
tools/wgpu-ex/: Cargo.toml  README.md
tools/wgpu-ex/src/: main.rs
vg_control/: upload_bridge.py
vg_control/data/: owl.py  uploader.py
