[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
video-audio-recorder = { path = "crates/video-audio-recorder" }
raw-input = { path = "crates/raw-input" }
game-process = { path = "crates/game-process" }
clap = { version = "4.5.39", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["rt"] }
futures-util = "0.3.31"
color-eyre = "0.6.5"
derive_more = { version = "2.0.1", features = ["full"] }
windows = "0.61.3"
uuid = { version = "1.17.0", features = ["v4"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri-winrt-notification = "0.7.2"
sysinfo = "0.32.1"
# libobs-wrapper = { version = "3.0.3", features = ["bootstrapper"]}
libobs-wrapper = "3.0.3"
async-trait = "0.1"  # For implementing the bootstrap status handler
libobs-sources = "2.0.5"
libobs-window-helper = "0.1.4"

[workspace.metadata]
# The libobs version to use (can either be a specific version or "latest")
libobs-version = "31.0.3"
# Optional: The directory to store the OBS build
# libobs-cache-dir = "../obs-build"
