[package]
name = "owl-recorder"
version = "0.9.0"
edition = "2024"

[dependencies]
input-capture.workspace = true
game-process.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-util.workspace = true
color-eyre.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri-winrt-notification.workspace = true
sysinfo.workspace = true
libobs-wrapper.workspace = true
libobs-sources.workspace = true
libobs-window-helper.workspace = true
async-trait.workspace = true
obws.workspace = true
windows.workspace = true

tray-icon = "0.14.3"
winit = "0.29.15"
egui_overlay = { git = "https://github.com/voidxela/egui_overlay.git", rev = "d0f003d88ac39cd84ac96d19b7bbef016a92f22d", features = [
    "egui_default",
    "glfw_default",
] }
egui_window_glfw_passthrough = { git = "https://github.com/voidxela/egui_overlay.git", rev = "d0f003d88ac39cd84ac96d19b7bbef016a92f22d" }
egui_render_three_d = { git = "https://github.com/voidxela/egui_overlay.git", rev = "d0f003d88ac39cd84ac96d19b7bbef016a92f22d" }
egui = "0.32" # higher versions break egui_overlay
egui_extras = { version = "0.32", features = ["all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png"] }
eframe = "0.32"
dirs = "6.0.0"

constants = { path = "../constants" }
rodio = "0.21.1"
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.12.23", features = ["json"] }

[build-dependencies]
embed-manifest = "1.3.1"
