[package]
name = "owl-recorder"
version = "0.11.0"
edition = "2024"

[dependencies]
input-capture.workspace = true
git-version.workspace = true
game-process.workspace = true
clap.workspace = true
dunce.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-util.workspace = true
color-eyre.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri-winrt-notification.workspace = true
sysinfo.workspace = true
obws.workspace = true
windows.workspace = true

constants = { path = "../constants" }

[build-dependencies]
embed-manifest = "1.3.1"
